apps/monitoring/uptime-kuma/overlays/monitoring/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:0mFUn7C5XXfhS9yKL+aLXtNdxcXn917vi/g+Bac=,iv:gXCejJ9PFa7NeVD3U3EtKGw4yAisXk3mY6JGQOnNWCk=,tag:BxUbIeXr2VsSjlQ51IgvvQ==,type:str]
        kubernetes.io/ingress.class: traefik-external
    # labels:
    #     app.kubernetes.io/name: uptime-kuma
    name: uptime-kuma
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:U+Q4VWo9+iv/saOfDe3iCtAK0bFVl1rC/xcFippPErN35luxbrdX0LIXgf4=,iv:LEsVmvK1o8s9tigPTfGUxo1DnQ/ZnHa9Ai5YZglFcCo=,tag:46pdtxq2Qi5brXa60iNjZA==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: uptime-kuma
              port: 3001
    tls:
        domains:
            - main: ENC[AES256_GCM,data:Kk9G4H0lQA0AUVxHaMEyxCSeBJkpXJaU+xcDOeI=,iv:yh/u1k4a1/J/ZMlSZ85QickD9Ua5jwTec8ZzX+vcvvM=,tag:2snI3ZUlEYVsf4Ju0V94NQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:071bFjk8b0l2pG/Z9lw6JEsm1rCc+fsUxRouPq9n,iv:EncLpqmVRyWUSaxs/pFlFnwfVN8s+Eqx0K7qzzwulzQ=,tag:ZQwRO8QeBQhIQzyS+nEJMw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: uptime-kuma-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3MktGMlN2bjZJMTFMajV4
[...]
            w8c5qHh01uQHiHi1U4QFQUizRjNVib9Gu0ehqrwESX3eqgfzKH5jww==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-09T10:58:20Z"
    mac: ENC[AES256_GCM,data:BM7ULyvbJHWpfLBSLPvHP7b6e7XPdpE7yUGVuCmjkLfkj6s4bLslOD+P35WEEatVA5UluMmIbKf6Zvxonmt/SKiwWVgtfHPYSd3U0+OlKVxu8CynpVtkJG13eNO0WU2+HSojGwqcFB0qHTMGzLi3FnsilLtnXzTqRnZ5SM1Men0=,iv:6kgiz+W4G6QzJlX7dwTJjHQrbRSnpfRMVxz0IsvRYg8=,tag:2603ZNuSFrlUhJ7sykCIjw==,type:str]
    pgp:
        - created_at: "2024-06-22T20:24:01Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//ckdUFF47JENHLxFJOHZDfsPBDa38fqH2UMJ+x0+OW12I
[...]
            =3F81
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
